<resources>
    <string name="app_name">小教室</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="finish">完成</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="rotate">旋转</string>
    <string name="submit">提交</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_">手机号码</string>
    <string name="pwd">密码</string>
    <string name="reason">推迟原因</string>
    <string name="person">人</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="charge">收费</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="QQ">QQ</string>
    <string name="email">邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="edit">编辑</string>
    <string name="please_select">请选择</string>
    <string name="please_set">请设置</string>
    <string name="please_input">请填写</string>
    <string name="unit_price">元</string>
    <string name="unit_price_by_hour">元/小时</string>
    <string name="per_hour">/小时</string>
    <string name="unfold_view_all">展开查看全部</string>
    <string name="put_way">收起</string>
    <string name="reload">重新加载</string>
    <string name="load_failed_tip">数据加载失败</string>
    <string name="empty_activity_tip">您还没有动态～</string>
    <string name="load_failed_tip_2">请确保您的手机已连网</string>
    <string name="mark">标记为已读</string>
    <string name="back">返回</string>
    <string name="ppt">PPT</string>
    <string name="word">Word</string>
    <string name="pdf">PDF</string>
    <string name="image">图片</string>
    <string name="hand_writing">板书</string>
    <string name="video">视频</string>
    <string name="screen_shot">截图</string>
    <string name="file_name">文件名</string>
    <string name="size">大小</string>
    <string name="modify_time">修改时间</string>
    <string name="moment_ago">刚刚</string>
    <string name="minute_ago">%1$d分钟之前</string>
    <string name="hour_ago">%1$d小时之前</string>
    <string name="rename">重命名</string>
    <string name="all">全部</string>
    <string name="add">添加</string>
    <string name="add_subject">没有我教的学科，立即添加</string>
    <string name="next">下一步</string>
    <string name="remark">备注</string>
    <string name="not_setting">未设置</string>
    <string name="exit_tips">再按一次返回键退出小教室</string>
    <string name="no_network">无法连接到网络，请确保您的网络已经打开!</string>
    <string name="mobile_network_title">你没有在WIFI环境下</string>
    <string name="mobile_network_desc">是否使用手机流量进行小教室直播</string>
    <string name="mobile_kick_out_desc">您已经在其它客户端进入教室，是否强制进入?</string>
    <string name="mobile_kick_out_cancel">取消强制进入，教室无法使用</string>
    <string name="mobile_kick_out_tips">您账号已经在其它%1$s登录了教室</string>
    <string name="mobile_network_forbid">停止使用</string>
    <string name="mobile_network_allow">继续直播</string>
    <string name="lead_teacher">主讲</string>
    <string name="assistant_teacher">助教</string>
    <string name="tips">提示</string>
    <string name="temporarily_unable">暂不</string>
    <string name="go_to_setting">去设置</string>
    <string name="select_for_you">您已选:</string>
    <string name="search_subject_tips">请输入您要找的学科类目</string>
    <string name="subject_category_select">学科类目选择</string>
    <string name="subject_not_select">至少选择一项</string>
    <string name="claim_succ">声明成功</string>
    <string name="claim_fail">声明失败</string>
    <string name="home_tab_index">首页</string>
    <string name="home_tab_contact">通讯录</string>
    <string name="home_tab_findings">发现</string>
    <string name="home_tab_circle">小圈</string>
    <string name="home_tab_live">直播</string>
    <string name="home_tab_message">消息</string>
    <string name="home_tab_mine">我的</string>
    <string name="qr_code">二维码</string>
    <string name="home_tab_class">会话</string>
    <string name="register">注册</string>
    <string name="reg_name_title">真实姓名</string>
    <string name="verify_code_title">验证码</string>
    <string name="verify_code_send_hint">发送验证码</string>
    <string name="verity_code_countdown">%1$sS</string>
    <string name="verity_code_re_send">重新发送</string>
    <string name="pwd_hint">请输入6&#8211;16位密码</string>
    <string name="register_protocol">《小教室用户服务协议》</string>
    <string name="register_protocol_agree">点击注册默认您同意</string>
    <string name="name_empty">请输入姓名</string>
    <string name="name_length_less_than_2">请输入至少2个字的姓名</string>
    <string name="name_length_more_than_16">请输入少于16字的姓名</string>
    <string name="phone_empty">请输入手机号</string>
    <string name="phone_error">请输入正确的手机号</string>
    <string name="verify_empty">请输入验证码</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="pwd_error">密码少于6位</string>
    <string name="login_reg_phone_hint">手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_reg_name_hint">姓名</string>
    <string name="reg_verify_code_hint">验证码</string>
    <string name="reg_pwd_hint">6&#8211;16位密码</string>
    <string name="login">登录</string>
    <string name="register_guide">还没有账号，立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="logout_tips">退出成功</string>
    <string name="forget_pwd_tips">这里仅支持找回学生或老师的个人密码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="verify_error">请输入正确的验证码</string>
    <string name="set_new_pwd_succ">密码设置成功，请重新登录</string>
    <string name="set_new_pwd_error">密码设置失败，请重新设置</string>
    <string name="third_login_tip">社交账号直接登录</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="block_cls_time_mark">距上课还有%1$d分钟</string>
    <string name="block_cls_course_num">第&#160;%1$d&#160;课</string>
    <string name="block_cls_course_total">共%1$d节</string>
    <string name="i_wanna_lean">我要学</string>
    <string name="i_wanna_teach">我要教</string>
    <string name="creative_class">开班</string>
    <string name="creative_class_tip">多节课，自主管理学生，上传及分享班级资料</string>
    <string name="creative_lesson">开公开课</string>
    <string name="creative_lesson_tip">单节课，学生通过搜索该课报名，进入教室上课</string>
    <string name="search_global_tip">课/班/个人/机构</string>
    <string name="search_tip1">输入你要找的班课名称，老师或者机构\n报名你要学的班课，开始学习</string>
    <string name="fans">粉丝</string>
    <string name="follows">关注</string>
    <string name="collections">收藏</string>
    <string name="my_course_duration">课时</string>
    <string name="course_credit">学分</string>
    <string name="my_account">我的账户</string>
    <string name="recharge">充值</string>
    <string name="withdrawals">我要提现</string>
    <string name="personal_home">个人主页</string>
    <string name="my_page">我的主页</string>
    <string name="my_course_mine_page">我的课</string>
    <string name="my_teaching">我的班课</string>
    <string name="my_enrollment">我报的班</string>
    <string name="my_contact">通讯录</string>
    <string name="my_ask_questions">我的提问</string>
    <string name="my_documents">我的资料库</string>
    <string name="my_collections">我的收藏</string>
    <string name="eval_management">评价管理</string>
    <string name="teach_ability">教学能力</string>
    <string name="system_notify">系统通知</string>
    <string name="name_verify">实名认证</string>
    <string name="get_more_right">可享更多权益</string>
    <string name="settings">设置</string>
    <string name="recommend_to_friends">推荐给好友</string>
    <string name="default_profile_txt">为自己写一句个性签名，让别人更了解你</string>
    <string name="my_order">我的订单</string>
    <string name="stu_lesson_duration">%1$s 学时（小时）</string>
    <string name="tea_lesson_duration">%1$s 教学时长（小时）</string>
    <string name="mobile_network_watch_live">允许2G/3G/4G观看直播</string>
    <string name="message_notify_set">消息提醒设置</string>
    <string name="account_safe">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback_help">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="help">帮助</string>
    <string name="clear_cache_completed">清除完成</string>
    <string name="current_pwd">当前密码</string>
    <string name="current_pwd_hint">请输入您的登录密码</string>
    <string name="current_pwd_input_error">您输入的登录密码有误</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_empty">请输入新密码</string>
    <string name="modify_pwd_succ">密码修改成功!</string>
    <string name="modify_pwd_fail">密码修改失败!</string>
    <string name="exit_login">退出登录</string>
    <string name="my_profile">我的资料</string>
    <string name="edit_portrait">编辑头像</string>
    <string name="upload_portrait_fail">上传头像失败</string>
    <string name="personalized_sign">个性签名</string>
    <string name="edit_profile_success">个人资料修改成功</string>
    <string name="add_cover">添加封面</string>
    <string name="upload_cover_fail">上传封面失败</string>
    <string name="add_cover_tips">一张好的封面可以增加报名人数哦~</string>
    <string name="add_cover_tips2">一张漂亮的封面让你的课更吸引人~</string>
    <string name="live_lesson_brief">简介</string>
    <string name="live_lesson_brief_hint">请填写公开课简介</string>
    <string name="live_lesson_label">标签</string>
    <string name="live_lesson_label_hint">添加标签更容易被搜索</string>
    <string name="add_label">添加标签</string>
    <string name="add_label_hint">%1$d个字内</string>
    <string name="teacher_introduction">老师介绍</string>
    <string name="teacher_introduction_title">师资介绍</string>
    <string name="teacher_introduction_hint">请填写师资介绍</string>
    <string name="audit">旁听</string>
    <string name="audit_title">旁听设置</string>
    <string name="audit_allowed">允许旁听</string>
    <string name="audit_visible_to_stu">旁听对学生可见</string>
    <string name="audit_people">旁听人</string>
    <string name="sale_promotion">促销</string>
    <string name="input_tips"><![CDATA[<font color="#cc0000">%1$d</font>]]>/%2$d字</string>
    <string name="home_search_hint">课/教室/个人/机构</string>
    <string name="course_of_learn">我报的班</string>
    <string name="course_of_teach">我授的课</string>
    <string name="my_course">我的课</string>
    <string name="cls_moment">班级圈</string>
    <string name="choose_class">选择班级</string>
    <string name="into_cls">进入教室</string>
    <string name="data_bank">资料库</string>
    <string name="class_data_bank">班级资料库</string>
    <string name="class_data_banks">班资料库</string>
    <string name="data_bank_of_mine">我的资料库</string>
    <string name="more">更多</string>
    <string name="leave_lesson">退课</string>
    <string name="speaker">主讲：</string>
    <string name="prepare_lesson">备课</string>
    <string name="evaluate">评价</string>
    <string name="lesson_again">再次开课</string>
    <string name="lesson_recreate">编辑</string>
    <string name="invite">邀请</string>
    <string name="lesson_creation_title">开公开课</string>
    <string name="lesson_creation">我要开课</string>
    <string name="lesson_creation_tips">目前只支持创建免费公开课</string>
    <string name="live_lesson">直播课</string>
    <string name="private_lesson">私密课</string>
    <string name="live_lesson_name">课名称</string>
    <string name="subject_category">学科类目</string>
    <string name="teach_form">教学形式</string>
    <string name="teach_form_lecture">公开课</string>
    <string name="teach_form_one2one">一对一</string>
    <string name="lesson_start_time">上课时间</string>
    <string name="lesson_duration">上课时长</string>
    <string name="live_lesson_name_hint">%1$d字以内</string>
    <string name="live_class_name">班级名称</string>
    <string name="video_setting">直播回放</string>
    <string name="video_auto_repaly">自动录像回放</string>
    <string name="video_auto_repaly_tips">自动录像后的视频，会保存到您的个人资料库中，并可自动回放</string>
    <string name="no_need_video">无需录像</string>
    <string name="directory_name">目录名称</string>
    <string name="relevance_video">关联视频</string>
    <string name="belong_to_dir">所属一级目录</string>
    <string name="record_lesson_teacher">主讲</string>
    <string name="is_need_enroll">是否需要报名</string>
    <string name="is_need_set_expired">是否设置有效期</string>
    <string name="rl_set_expired_date_tip">（学生从报名之日开始算起）</string>
    <string name="unit_day">天</string>
</resources>