<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg">

    <!--封面设置-->
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/cover_add_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/add_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cover"
                    android:textColor="@color/font_dark_gray"
                    android:textSize="@dimen/font_28px"
                    android:drawableLeft="@drawable/ic_add_lesson_cover"
                    android:drawablePadding="@dimen/px20"
                    android:paddingTop="@dimen/px26"
                    android:paddingBottom="@dimen/px26"
                    android:paddingLeft="@dimen/px40"
                    android:paddingRight="@dimen/px40"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/px160"/>

            <TextView
                    android:id="@+id/add_cover_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cover_tips"
                    android:textColor="@color/font_light_gray"
                    android:textSize="@dimen/font_26px"
                    android:layout_marginTop="@dimen/px2"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <ImageView
                android:id="@+id/cover_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </FrameLayout>

    <!--直播课简介-->
    <LinearLayout
            android:layout_marginTop="@dimen/px32"
            android:id="@+id/live_lesson_brief_layout"
            style="@style/LiveLessonItem">

        <TextView
                style="@style/LiveLessonCreateTitle"
                android:text="@string/live_lesson_brief"/>

        <TextView
                android:id="@+id/live_lesson_brief"
                style="@style/LiveLessonRightEntrance"
                android:text="@string/please_input"/>

    </LinearLayout>

    <include
            layout="@layout/layout_horizontal_line"/>

    <!--直播课标签-->
    <LinearLayout
            android:id="@+id/live_lesson_label_layout"
            style="@style/LiveLessonItem">

        <TextView
                style="@style/LiveLessonCreateTitle"
                android:text="@string/live_lesson_label"/>

        <TextView
                android:id="@+id/live_lesson_label"
                style="@style/LiveLessonRightEntrance"
                android:text="@string/live_lesson_label_hint"/>

    </LinearLayout>

    <include
            layout="@layout/layout_horizontal_line"/>

    <!--老师介绍-->
    <LinearLayout
            android:id="@+id/teacher_introduction_layout"
            style="@style/LiveLessonItem">

        <TextView
                style="@style/LiveLessonCreateTitle"
                android:text="@string/teacher_introduction"/>

        <TextView
                android:id="@+id/teacher_introduction"
                style="@style/LiveLessonRightEntrance"
                android:text="@string/please_input"/>

    </LinearLayout>

    <include
            layout="@layout/layout_horizontal_line"/>

    <!--旁听-->
    <LinearLayout
            android:id="@+id/sit_in_on_layout"
            style="@style/LiveLessonItem">

        <TextView
                style="@style/LiveLessonCreateTitle"
                android:text="@string/audit"/>

        <TextView
                android:id="@+id/sit_in_on"
                style="@style/LiveLessonRightEntrance"
                android:text="@string/please_set"/>

    </LinearLayout>

    <include
            android:id="@+id/sale_promotion_divide_line"
            layout="@layout/layout_horizontal_line"/>

    <!--促销-->
    <LinearLayout
            android:visibility="gone"
            android:id="@+id/sale_promotion_layout"
            style="@style/LiveLessonItem">

        <TextView
                style="@style/LiveLessonCreateTitle"
                android:text="@string/sale_promotion"/>

        <TextView
                android:id="@+id/sale_promotion"
                style="@style/LiveLessonRightEntrance"
                android:text="@string/please_set"/>

    </LinearLayout>

    <Button
            android:id="@+id/sub_btn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px86"
            style="@style/BigSubmitBtn"
            android:text="@string/finish"
            android:layout_marginBottom="@dimen/px30"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="@dimen/px40"
            android:visibility="gone"/>

</LinearLayout>
