<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <!--课名称-->
        <LinearLayout
                android:layout_marginTop="@dimen/px32"
                style="@style/LiveLessonItem">

            <TextView
                    style="@style/LiveLessonCreateTitle"
                    android:text="@string/live_class_name"/>

            <TextView
                    android:id="@+id/lesson_name_text"
                    style="@style/LiveLessonRightEntrance"
                    android:text="@string/please_input"
                    />
        </LinearLayout>

        <include layout="@layout/layout_horizontal_line"/>

        <LinearLayout
                style="@style/LiveLessonItem">

            <TextView
                    style="@style/LiveLessonCreateTitle"
                    android:text="@string/lesson_start_time"/>

            <TextView
                    android:id="@+id/lesson_subject"
                    style="@style/LiveLessonRightEntrance"
                    android:text="@string/please_select"
                    />
        </LinearLayout>

        <include layout="@layout/layout_horizontal_line"/>

        <!--上课时长-->
        <LinearLayout
                style="@style/LiveLessonItem">

            <TextView
                    style="@style/LiveLessonTitle"
                    android:text="@string/lesson_duration"/>

            <cn.xiaojs.xma.ui.widget.EditTextDel
                    android:id="@+id/lesson_duration"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_set"
                    android:textColor="@color/font_create_lesson_content"
                    android:textColorHint="@color/font_light_gray"
                    style="@style/LessonText"
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_marginRight="@dimen/px20"
                    />

            <TextView
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:textColor="@color/font_black"
                    android:textSize="@dimen/font_26px"/>

        </LinearLayout>

        <include layout="@layout/layout_horizontal_line"/>


        <!--加入班级是否需要验证-->
        <LinearLayout
                android:paddingLeft="@dimen/px28"
                android:paddingRight="@dimen/px26"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/px25"
                    android:paddingBottom="@dimen/px28"
                    android:text="@string/video_setting"
                    android:background="@color/white"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/px22"
                    android:paddingBottom="@dimen/px28"
                    >

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/px22"
                        android:paddingTop="@dimen/px16"
                        android:paddingBottom="@dimen/px16"
                        android:textSize="@dimen/font_28px"
                        android:textColor="@color/font_dark_gray"
                        android:text="@string/video_auto_repaly"
                        android:button="@drawable/single_check_selector"/>

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/px60"
                        android:paddingBottom="@dimen/px16"
                        android:textSize="@dimen/font_26px"
                        android:textColor="@color/radio_tips"
                        android:text="@string/video_auto_repaly_tips"
                        android:button="@null"
                        android:enabled="false"/>

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/px22"
                        android:paddingTop="@dimen/px16"
                        android:paddingBottom="@dimen/px16"
                        android:textSize="@dimen/font_28px"
                        android:textColor="@color/font_dark_gray"
                        android:text="@string/no_need_video"
                        android:button="@drawable/single_check_selector"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>


</ScrollView>